# Calculator_new

./: .gitignore  API.cpp  API.h  BaseOperation.cpp  BaseOperation.h  CMakeLists.txt  Calculator.cpp  Calculator.h  Calculator.sln  Calculator.vcxproj  Calculator.vcxproj.filters  ExpressionElements.cpp  ExpressionElements.h  ModuleManager.cpp  ModuleManager.h  Separator.cpp  Separator.h  Source.cpp
